Revise skills and projects sections in index.html
Updated skills and projects sections with new content and descriptions.

--- a/index.html
+++ b/index.html
@@ -34,39 +34,68 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li><strong>Languages:</strong> HTML, CSS, JavaScript, Python, Java</li>
-      <li><strong>Tools:</strong> Git, GitHub</li>
-      <li><strong>Other:</strong> Problem-solving, Responsive Design, Collaboration</li>
+      <li><strong>Frontend:</strong> HTML5, CSS3 (Flexbox, Responsive Design), JavaScript (DOM manipulation, basic logic)</li>
+  <li><strong>Programming:</strong> Java, Python, C++ (basic)</li>
+  <li><strong>Tools:</strong> Git, GitHub</li>
+  <li><strong>Core Strengths:</strong> Problem-solving, logical thinking, continuous learning</li>
+
     </ul>
   </section>
 
   <section id="projects">
-    <h2>My Projects</h2>
-    <div class="project-card">
-      <h3>Fylo Landing Page</h3>
-      <p>A responsive landing page for Fylo, built using HTML and CSS, focusing on front-end development and responsive design.</p>
-    </div>
-    <div class="project-card">
-      <h3>Huddle Landing Page</h3>
-      <p>A responsive landing page for Huddle, built using HTML and CSS, showcasing modern web design techniques.</p>
-    </div>
-    <div class="project-card">
-      <h3>Social Links Profile</h3>
-      <p>A personal profile page with links to social media, showcasing basic HTML and CSS skills for layout and design.</p>
-    </div>
-    <div class="project-card">
-      <h3>Recipe Page</h3>
-      <p>A simple recipe page built with HTML and CSS, focusing on structuring content for easy navigation and readability.</p>
-    </div>
-    <div class="project-card">
-      <h3>Quiz Webpage</h3>
-      <p>A quiz webpage built with JavaScript, allowing users to answer multiple-choice questions and see their results.</p>
-    </div>
-    <div class="project-card">
-      <h3>Python Quiz Program</h3>
-      <p>An interactive quiz program built in Python, where users can answer questions and receive their score at the end.</p>
-    </div>
-  </section>
+  <h2>My Projects</h2>
+
+  <div class="project-card">
+    <h3>Fylo Landing Page</h3>
+    <p>
+      A fully responsive landing page built with HTML and CSS, focusing on layout and mobile-first design.
+    </p>
+    <p><strong>What I learned:</strong> Flexbox, responsive layouts, clean HTML structure.</p>
+  </div>
+
+  <div class="project-card">
+    <h3>Huddle Landing Page</h3>
+    <p>
+      A modern landing page showcasing consistent styling and responsive UI techniques.
+    </p>
+    <p><strong>What I learned:</strong> Visual hierarchy, spacing, and layout consistency.</p>
+  </div>
+
+  <div class="project-card">
+    <h3>Social Links Profile</h3>
+    <p>
+      A personal profile page displaying social links using clean layout and accessible design.
+    </p>
+    <p><strong>What I learned:</strong> Simple UI design and content organization.</p>
+  </div>
+
+  <div class="project-card">
+    <h3>Recipe Page</h3>
+    <p>
+      A static recipe webpage built with semantic HTML for readability and easy navigation.
+    </p>
+    <p><strong>What I learned:</strong> Structuring content clearly and improving readability.</p>
+  </div>
+
+  <div class="project-card">
+    <h3>Rock Paper Scissors (JavaScript)</h3>
+    <p>
+      An interactive browser-based game built with JavaScript that allows users to play against the computer.
+    </p>
+    <p><strong>What I learned:</strong> JavaScript logic, conditionals, event handling, and DOM updates.</p>
+  </div>
+
+  <div class="project-card">
+    <h3>To-Do List App (JavaScript)</h3>
+    <p>
+      A simple to-do list application that lets users add, remove, and manage tasks dynamically.
+    </p>
+    <p><strong>What I learned:</strong> DOM manipulation, user input handling, and basic app state management.</p>
+  </div>
+</section>
+
+
+  
 
   <section id="contact">
     <h2>Contact</h2>
